--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="app">
-        <h1>Online Seating Chart</h1>
+        <h1>Seating Chart</h1>
 
         <div class="controls">
             <label>
