--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h3>Add Student</h3>
             <input type="text" id="studentName" placeholder="Student Name">
             <input type="file" id="studentPhoto" accept="image/*">
-            <p class="hint"> Click a seat to assign the student</p>
+            <p class="hint"><hr> Click a seat to assign the student</p>
         </div>
 
         <div class="classroom">
